syntax = "proto3";

option csharp_namespace = "Dotnet.Grpc";

package auth;

service AuthGrpc {
  rpc GetUserById (UserRequest) returns (UserReply);
}

message UserRequest {
  int32 id = 1;
}

message UserReply {
  int32 id = 1;
  string email = 2;
  string firstname = 3;
  string lastname = 4;
}
